# RAG_self

./: .env.example  .gitignore  2026-05-08-document-management-qa-accuracy-plan_zh.md  main.py  pyproject.toml  requirements.txt  实施计划.md  需求说明.md  项目技术总结.md
app/: main.py
app/api/: conversations.py  courses.py  documents.py  importer.py  qa.py  questions.py  search.py
app/core/: config.py  database.py
app/models/: __init__.py  conversation.py  course.py  document.py  import_task.py  question.py
app/services/: chunker.py  conversation_service.py  course_service.py  document_service.py  embedding.py  extractor.py  importer.py  llm.py  parser.py  qa_service.py  question_service.py  search_service.py  vector_store.py
app/web/: index.html
app/web/static/: app.js  index.html  style.css
docs/superpowers/plans/: 2026-05-08-document-management-qa-accuracy-plan.md  2026-05-08-vue-frontend-redesign.md  2026-05-09-import-auto-classification.md  2026-05-09-qa-conversation-history.md
docs/superpowers/specs/: 2026-05-08-document-management-and-qa-accuracy-design.md  2026-05-08-vue-frontend-redesign.md  2026-05-09-import-auto-classification-design.md  2026-05-09-qa-conversation-history-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  conversations.ts  qa.ts  (+5 more)
tests/: test_api.py  test_chunker.py  test_document_api.py  test_document_service.py  test_extractor.py  test_importer.py  test_parser.py  test_question_service.py  test_search_service.py
(+55 files in other folders)
